server/kubernetes_and_openshift/manifests/aqua_csp_007_networking/openshift_route/aqua-web-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-web
  namespace: aqua
  labels:
    app: aqua-web
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
      name: aqua-web-ssl
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: aqua-web
  selector:
    app: aqua-web
  type: LoadBalancer
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: aqua-web
  namespace: aqua
  labels:
    app: aqua-web
spec:
  to:
    kind: Service
    name: aqua-web
    weight: 100
  port:
  # Please change the targetPort to aqua-web if you would like to use http protocol(insecure mode)
    targetPort: aqua-web-ssl
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
